Updates to html flow
